屏蔽不能编译通过的module

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <module>otsreader</module>
         <module>otsstreamreader</module>
         <module>txtfilereader</module>
-        <module>hdfsreader</module>
+<!--        <module>hdfsreader</module>-->
         <module>streamreader</module>
         <module>ossreader</module>
         <module>ftpreader</module>
@@ -65,7 +65,7 @@
         <module>rdbmsreader</module>
         <module>hbase11xreader</module>
         <module>hbase094xreader</module>
-        <module>tsdbreader</module>
+<!--        <module>tsdbreader</module>-->
         <module>opentsdbreader</module>
         <module>cassandrareader</module>
         <module>gdbreader</module>
@@ -78,7 +78,7 @@
         <module>odpswriter</module>
         <module>txtfilewriter</module>
         <module>ftpwriter</module>
-        <module>hdfswriter</module>
+<!--        <module>hdfswriter</module>-->
         <module>streamwriter</module>
         <module>otswriter</module>
         <module>oraclewriter</module>
@@ -95,7 +95,7 @@
         <module>hbase11xsqlwriter</module>
         <module>hbase11xsqlreader</module>
         <module>elasticsearchwriter</module>
-        <module>tsdbwriter</module>
+<!--        <module>tsdbwriter</module>-->
         <module>adbpgwriter</module>
         <module>gdbwriter</module>
         <module>cassandrawriter</module>
